@@ -34,15 +34,18 @@
 #include <gnuradio/blocks/multiply_ff.h>
 #include <gnuradio/blocks/multiply_const_ff.h>
 #include <gnuradio/blocks/add_ff.h>
+#include <gnuradio/blocks/sub_ff.h>
 #else
 #include <gnuradio/filter/fir_filter_blk.h>
 #include <gnuradio/blocks/multiply.h>
 #include <gnuradio/blocks/multiply_const.h>
 #include <gnuradio/blocks/add_blk.h>
+#include <gnuradio/blocks/sub.h>
 #endif
 
 #include <gnuradio/analog/pll_refout_cc.h>
 #include <gnuradio/blocks/complex_to_imag.h>
+#include <gnuradio/blocks/delay.h>
 #include <vector>
 #include "dsp/fm_deemph.h"
 #include "dsp/lpf.h"
@@ -94,10 +97,10 @@ public:
 private:
     /* GR blocks */
     gr::filter::fir_filter_fcc::sptr  tone;  /*!< Pilot tone BPF. */
+    gr::blocks::delay::sptr           delay; /*!< Delay to match pilot tone BPF. */
     gr::analog::pll_refout_cc::sptr   pll;   /*!< Pilot tone PLL. */
     gr::blocks::multiply_cc::sptr subtone;   /*!< Stereo subtone. */
     gr::blocks::complex_to_imag::sptr lo;    /*!< Complex tone imag. */
-    gr::filter::fir_filter_fff::sptr  lo2;   /*!< Subtone BPF. */
     gr::blocks::multiply_ff::sptr mixer;     /*!< Balance mixer. */
     lpf_ff_sptr lpf0;              /*!< Low-pass filter #0. */
     lpf_ff_sptr lpf1;              /*!< Low-pass filter #1. */
@@ -105,10 +108,8 @@ private:
     resampler_ff_sptr audio_rr1;   /*!< Audio resampler #1. */
     fm_deemph_sptr deemph0;        /*!< FM de-emphasis #0. */
     fm_deemph_sptr deemph1;        /*!< FM de-emphasis #1. */
-    gr::blocks::multiply_const_ff::sptr cdp; /*!< Channel delta (plus). */
-    gr::blocks::multiply_const_ff::sptr cdm; /*!< Channel delta (minus). */
-    gr::blocks::add_ff::sptr add0;           /*!< Left stereo channel. */
-    gr::blocks::add_ff::sptr add1;           /*!< Right stereo channel. */
+    gr::blocks::add_ff::sptr add;  /*!< Left stereo channel. */
+    gr::blocks::sub_ff::sptr sub;  /*!< Right stereo channel. */
 
     /* other parameters */
     float d_input_rate;                  /*! Input rate. */
