@@ -5,6 +5,7 @@
        NEW: Display filename when recording audio.
      FIXED: Audio output doesn't work on MacOS Big Sur.
      FIXED: DC remove button doesn't work when Demod Off mode is selected.
+  IMPROVED: Better demodulation of FM stereo signals.
 
 
     2.14.3: Released December 9, 2020
